flask-msa/details.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
  template:
    metadata:
      labels:
        app: details
    spec:
      containers:
      - name: details
        image: gofiddlersgreen/flask-msa-details
        ports:
        - containerPort: 80
