flask-msa/details-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: details-nodeport
  labels:
    app: details
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
  selector:
    app: details
