flask-msa/frontpage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontpage-svc
  labels:
    app: frontpage
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: frontpage
